force-app/main/default/objects/WorkOrderLineItem/fields/PercentualContribuicaoFuncDependente__c.field-meta.xml
<CustomField>
    <fullName>PercentualContribuicaoFuncDependente__c</fullName>
    <inlineHelpText>Percentual de contribuição do funcionário em relação ao dependente</inlineHelpText>
    <label>% de contribuição funcionário/dependente</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>