force-app/main/default/objects/WorkOrderLineItem/fields/PercentualContribuicaoFuncTitular__c.field-meta.xml
<CustomField>
    <fullName>PercentualContribuicaoFuncTitular__c</fullName>
    <inlineHelpText>Percentual de contribuição do funcionário em relação ao titular</inlineHelpText>
    <label>% de contribuição funcionário/titular</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>