force-app/main/default/objects/WorkOrderLineItem/fields/PercentualContribuicaoTitular__c.field-meta.xml
<CustomField>
    <fullName>PercentualContribuicaoTitular__c</fullName>
    <inlineHelpText>Percentual de contribuição do empregador em relação ao titular</inlineHelpText>
    <label>% de contribuição titular</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>