force-app/main/default/objects/WorkOrderLineItem/fields/PercentualSinistralidade__c.field-meta.xml
<CustomField>
    <fullName>PercentualSinistralidade__c</fullName>
    <label>Percentual de sinistralidade</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>