force-app/main/default/objects/WorkOrderLineItem/fields/PercentualUltimoReajuste__c.field-meta.xml
<CustomField>
    <fullName>PercentualUltimoReajuste__c</fullName>
    <label>Percentual do último reajuste</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>