force-app/main/default/objects/WorkOrderLineItem/fields/PessoaDecisora__c.field-meta.xml
<CustomField>
    <fullName>PessoaDecisora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A pessoa é decisora da compra?</label>
    <type>Checkbox</type>
</CustomField>