force-app/main/default/objects/WorkOrderLineItem/fields/PlanoRegulamentado__c.field-meta.xml
<CustomField>
    <fullName>PlanoRegulamentado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plano regulamentado</label>
    <type>Checkbox</type>
</CustomField>