force-app/main/default/objects/WorkOrderLineItem/fields/PossuiPlanoAssistencial__c.field-meta.xml
<CustomField>
    <fullName>PossuiPlanoAssistencial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui plano assistencial?</label>
    <type>Checkbox</type>
</CustomField>