force-app/main/default/objects/WorkOrderLineItem/fields/PossuiPlanoEmpresarial__c.field-meta.xml
<CustomField>
    <fullName>PossuiPlanoEmpresarial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui plano empresarial</label>
    <type>Checkbox</type>
</CustomField>