force-app/main/default/objects/WorkOrderLineItem/fields/PossuiPlanoOdontologico__c.field-meta.xml
<CustomField>
    <fullName>PossuiPlanoOdontologico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Possui plano odontológico?</label>
    <type>Checkbox</type>
</CustomField>