force-app/main/default/objects/WorkOrderLineItem/fields/QuantidadeModulos__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeModulos__c</fullName>
    <label>Quantidade de módulos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>