force-app/main/default/objects/WorkOrderLineItem/fields/RazaoSocialGrupo__c.field-meta.xml
<CustomField>
    <fullName>RazaoSocialGrupo__c</fullName>
    <label>Razão social do grupo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>