force-app/main/default/objects/WorkOrderLineItem/fields/RecorTypeDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>RecorTypeDeveloperName__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome desenvolvedor do tipo de registro</label>
    <type>Text</type>
</CustomField>