force-app/main/default/objects/WorkOrderLineItem/fields/RegistroCliente__c.field-meta.xml
<CustomField>
    <fullName>RegistroCliente__c</fullName>
    <label>Registro do cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>