force-app/main/default/objects/WorkOrderLineItem/fields/Rua__c.field-meta.xml
<CustomField>
    <fullName>Rua__c</fullName>
    <formula>Lead__r.Street</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rua</label>
    <type>Text</type>
</CustomField>