force-app/main/default/objects/WorkOrderLineItem/fields/SRAtendimento__c.field-meta.xml
<CustomField>
    <fullName>SRAtendimento__c</fullName>
    <description>Referência ao nome de usuário do OwnerId</description>
    <formula>&quot;Atendimento: &quot; + OwnerId__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR - Atendimento</label>
    <type>Text</type>
</CustomField>