force-app/main/default/objects/WorkOrderLineItem/fields/SRBairro__c.field-meta.xml
<CustomField>
    <fullName>SRBairro__c</fullName>
    <description>Campo fórmula para obter e disponibilizar os bairros dos leads relacionados, dentro das atas.</description>
    <formula>&quot;Bairro: &quot; + Lead__r.Bairro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR - Bairro</label>
    <type>Text</type>
</CustomField>