force-app/main/default/objects/WorkOrderLineItem/fields/SRCidade__c.field-meta.xml
<CustomField>
    <fullName>SRCidade__c</fullName>
    <description>Campo fórmula para obter e disponibilizaras cidades dos leads relacionados, dentro das atas.</description>
    <formula>&quot;Cidade: &quot; + Lead__r.City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR - Cidade</label>
    <type>Text</type>
</CustomField>