force-app/main/default/objects/WorkOrderLineItem/fields/SRCNPJ__c.field-meta.xml
<CustomField>
    <fullName>SRCNPJ__c</fullName>
    <description>Campo fórmula para obter e disponibilizar o CNPJ do Lead dentro das atas.</description>
    <formula>IF(ISBLANK(Lead__r.CNPJ__c), &quot;&quot;, &quot;CNPJ: &quot; + Lead__r.CNPJ__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR - CNPJ</label>
    <type>Text</type>
</CustomField>