force-app/main/default/objects/WorkOrderLineItem/fields/SRCorretora__c.field-meta.xml
<CustomField>
    <fullName>SRCorretora__c</fullName>
    <description>Campo para obter o nome da corretora selecionada.</description>
    <formula>IF(ISPICKVAL(Corretora__c, &apos;&apos;) , &apos;&apos;, &apos;Corretora: &apos; + TEXT(Corretora__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR - Corretora</label>
    <type>Text</type>
</CustomField>