force-app/main/default/objects/WorkOrderLineItem/fields/SREmail__c.field-meta.xml
<CustomField>
    <fullName>SREmail__c</fullName>
    <description>Campo fórmula para obter e disponibilizar os e-mails dos leads relacionados, dentro das atas.</description>
    <formula>&quot;E-mail: &quot; + Lead__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR - Email</label>
    <type>Text</type>
</CustomField>