force-app/main/default/objects/WorkOrderLineItem/fields/SREstado__c.field-meta.xml
<CustomField>
    <fullName>SREstado__c</fullName>
    <description>Campo fórmula para obter e disponibilizar os estados dos leads relacionados, dentro das atas.</description>
    <formula>&quot;Estado: &quot; + Lead__r.State</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR - Estado</label>
    <type>Text</type>
</CustomField>