force-app/main/default/objects/WorkOrderLineItem/fields/SRMotivoVisita__c.field-meta.xml
<CustomField>
    <fullName>SRMotivoVisita__c</fullName>
    <description>Campo para obtenção do motivo da visita realizada</description>
    <formula>&apos;Motivo da visita: &apos; + WorkOrder.Subject</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR - Motivo da visita</label>
    <type>Text</type>
</CustomField>