force-app/main/default/objects/WorkOrderLineItem/fields/SRMotivoVisitaCall__c.field-meta.xml
<CustomField>
    <fullName>SRMotivoVisitaCall__c</fullName>
    <description>Campo para obtenção do motivo da visita realizada</description>
    <formula>&apos;Motivo da visita: &apos; + TEXT(MotivoVisitaCall__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR - Motivo da visita ata call</label>
    <type>Text</type>
</CustomField>