force-app/main/default/objects/WorkOrderLineItem/fields/SRNomeContato__c.field-meta.xml
<CustomField>
    <fullName>SRNomeContato__c</fullName>
    <description>Campo fórmula para obter e disponibilizar os nomes dos leads relacionados, dentro das atas.</description>
    <formula>&quot;Nome do contato: &quot; + Lead__r.FirstName + &quot; &quot; + Lead__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR - Nome do contato</label>
    <type>Text</type>
</CustomField>