force-app/main/default/objects/WorkOrderLineItem/fields/SRNomeEmpresa__c.field-meta.xml
<CustomField>
    <fullName>SRNomeEmpresa__c</fullName>
    <description>Campo fórmula para obter e disponibilizar as empresas dos leads relacionados, dentro das atas.</description>
    <formula>IF(ISBLANK(Lead__r.Company), &quot;&quot;, &quot;Nome da empresa: &quot; + Lead__r.Company)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR - Nome da Empresa</label>
    <type>Text</type>
</CustomField>