force-app/main/default/objects/WorkOrderLineItem/fields/SRObservacoes__c.field-meta.xml
<CustomField>
    <fullName>SRObservacoes__c</fullName>
    <description>Campo para obter as observações da visita</description>
    <formula>&apos;Observações: &apos; +  ObservacoesGerais__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR - Observações</label>
    <type>Text</type>
</CustomField>