force-app/main/default/objects/WorkOrderLineItem/fields/SRRepresentanteCorretora__c.field-meta.xml
<CustomField>
    <fullName>SRRepresentanteCorretora__c</fullName>
    <description>Campo para obtenção do nome do representante da corretora.</description>
    <formula>IF(NomeRepresentanteCorretora__c == &apos;&apos;, &apos;&apos;, &apos;Representante Corretora: &apos; + NomeRepresentanteCorretora__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR - Representante corretora</label>
    <type>Text</type>
</CustomField>