force-app/main/default/objects/WorkOrderLineItem/fields/SRRua__c.field-meta.xml
<CustomField>
    <fullName>SRRua__c</fullName>
    <formula>&quot;Rua: &quot; + Lead__r.Street</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SR - Rua</label>
    <type>Text</type>
</CustomField>