force-app/main/default/objects/WorkOrderLineItem/fields/Telefone__c.field-meta.xml
<CustomField>
    <fullName>Telefone__c</fullName>
    <description>Campo fórmula para obter e disponibilizar os telefones dos leads relacionados, dentro das atas.</description>
    <formula>Lead__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone</label>
    <type>Text</type>
</CustomField>