force-app/main/default/objects/WorkOrderLineItem/fields/TipoCliente__c.field-meta.xml
<CustomField>
    <fullName>TipoCliente__c</fullName>
    <label>Tipo de cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PF</fullName>
            </value>
            <value>
                <fullName>PJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>