force-app/main/default/objects/WorkOrderLineItem/fields/TipoCustoAtual__c.field-meta.xml
<CustomField>
    <fullName>TipoCustoAtual__c</fullName>
    <label>Tipo de custo atual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Linear</fullName>
            </value>
            <value>
                <fullName>Faixa Etária</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>