force-app/main/default/objects/WorkOrderLineItem/fields/TipoVenda__c.field-meta.xml
<CustomField>
    <fullName>TipoVenda__c</fullName>
    <label>Tipo de venda</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Transferência</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>