force-app/main/default/objects/WorkOrderLineItem/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>