force-app/main/default/objects/WorkOrderLineItem/fields/ValorMedioOutraOperadora__c.field-meta.xml
<CustomField>
    <fullName>ValorMedioOutraOperadora__c</fullName>
    <label>Valor médio da outra operadora</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>