force-app/main/default/objects/WorkOrderLineItem/fields/VendaConcluida__c.field-meta.xml
<CustomField>
    <fullName>VendaConcluida__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Venda foi concluída?</label>
    <type>Checkbox</type>
</CustomField>