force-app/main/default/objects/WorkOrderLineItem/fields/VidasOutraOperadora__c.field-meta.xml
<CustomField>
    <fullName>VidasOutraOperadora__c</fullName>
    <label>Vidas outra operadora</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>