force-app/main/default/objects/WorkOrderLineItem/recordTypes/ApresentacaoPropostaNegociacao.recordType-meta.xml
<RecordType>
    <fullName>ApresentacaoPropostaNegociacao</fullName>
    <active>true</active>
    <label>Apresentação de Proposta/Negociação</label>
</RecordType>