force-app/main/default/objects/WorkOrderLineItem/recordTypes/ClienteAusente.recordType-meta.xml
<RecordType>
    <fullName>ClienteAusente</fullName>
    <active>true</active>
    <label>Cliente Ausente</label>
</RecordType>