force-app/main/default/objects/WorkOrderLineItem/recordTypes/ConclusaoNegociacao.recordType-meta.xml
<RecordType>
    <fullName>ConclusaoNegociacao</fullName>
    <active>true</active>
    <label>Conclusão da Negociação</label>
</RecordType>