force-app/main/default/objects/WorkOrderLineItem/recordTypes/Implantacao.recordType-meta.xml
<RecordType>
    <fullName>Implantacao</fullName>
    <active>true</active>
    <label>Implantação</label>
</RecordType>