force-app/main/default/objects/WorkOrderLineItem/recordTypes/ImplantacaoCorretora.recordType-meta.xml
<RecordType>
    <fullName>ImplantacaoCorretora</fullName>
    <active>true</active>
    <label>Implantação Corretora</label>
</RecordType>