force-app/main/default/objects/WorkOrderLineItem/recordTypes/LojaFisica.recordType-meta.xml
<RecordType>
    <fullName>LojaFisica</fullName>
    <active>true</active>
    <label>Loja Física</label>
</RecordType>