force-app/main/default/objects/WorkOrderLineItem/recordTypes/ManutencaoCorretora.recordType-meta.xml
<RecordType>
    <fullName>ManutencaoCorretora</fullName>
    <active>true</active>
    <label>Manutenção Corretora</label>
</RecordType>