force-app/main/default/objects/WorkOrderLineItem/recordTypes/ManutencaoRelacionamento.recordType-meta.xml
<RecordType>
    <fullName>ManutencaoRelacionamento</fullName>
    <active>true</active>
    <label>Manutenção Relacionamento</label>
</RecordType>