force-app/main/default/objects/WorkOrderLineItem/recordTypes/ProspeccaoCorretora.recordType-meta.xml
<RecordType>
    <fullName>ProspeccaoCorretora</fullName>
    <active>true</active>
    <label>Prospecção Corretora</label>
</RecordType>