force-app/main/default/objects/WorkOrderLineItem/recordTypes/ProspeccaoEmpresarial.recordType-meta.xml
<RecordType>
    <fullName>ProspeccaoEmpresarial</fullName>
    <active>true</active>
    <label>Prospecção Empresarial</label>
</RecordType>