force-app/main/default/objects/WorkOrderLineItem/recordTypes/ProspeccaoPessoaFisica.recordType-meta.xml
<RecordType>
    <fullName>ProspeccaoPessoaFisica</fullName>
    <active>true</active>
    <label>Prospecção Pessoa Física</label>
</RecordType>