force-app/main/default/objects/WorkOrderLineItem/validationRules/ContingentePotencial.validationRule-meta.xml
<ValidationRule>
    <fullName>ContingentePotencial</fullName>
    <active>false</active>
    <errorConditionFormula>(ISPICKVAL(TipoCliente__c, &apos;PJ&apos;)
&amp;&amp;
ISBLANK( ContingentePotencial__c))
&amp;&amp; RecordType.Name == &apos;Apresentação de Proposta/Negociação&apos;</errorConditionFormula>
    <errorDisplayField>ContingentePotencial__c</errorDisplayField>
    <errorMessage>Campo Contigente Potencial Obrigatório</errorMessage>
</ValidationRule>