force-app/main/default/objects/WorkOrderLineItem/validationRules/Decisora.validationRule-meta.xml
<ValidationRule>
    <fullName>Decisora</fullName>
    <active>false</active>
    <errorConditionFormula>((PessoaDecisora__c==false)
&amp;&amp;
( ISBLANK(NomeDecisor__c )))
&amp;&amp; RecordType.Name == &apos;Apresentação de Proposta/Negociação&apos;</errorConditionFormula>
    <errorDisplayField>NomeDecisor__c</errorDisplayField>
    <errorMessage>Campo Nome do decisor obrigatório</errorMessage>
</ValidationRule>