force-app/main/default/objects/WorkOrderLineItem/validationRules/InformarNomeOutraOperadora.validationRule-meta.xml
<ValidationRule>
    <fullName>InformarNomeOutraOperadora</fullName>
    <active>false</active>
    <errorConditionFormula>(ISPICKVAL( Operadora__c , &apos;Outra&apos;)
&amp;&amp;
ISBLANK(OutraOperadora__c ))
&amp;&amp; RecordType.Name == &apos;Manutenção Relacionamento&apos;</errorConditionFormula>
    <errorDisplayField>OutraOperadora__c</errorDisplayField>
    <errorMessage>Campo outra operadora Obrigatório</errorMessage>
</ValidationRule>