force-app/main/default/objects/WorkOrderLineItem/validationRules/InformarNomeOutraOperadoraProspEmpresari.validationRule-meta.xml
<ValidationRule>
    <fullName>InformarNomeOutraOperadoraProspEmpresari</fullName>
    <active>false</active>
    <errorConditionFormula>(ISPICKVAL( Operadora__c , &apos;Outra&apos;)
&amp;&amp;
ISBLANK( OutraOperadora__c ))
&amp;&amp; RecordType.Name == &apos;Prospecção Empresarial&apos;</errorConditionFormula>
    <errorDisplayField>OutraOperadora__c</errorDisplayField>
    <errorMessage>Campo outra operadora Obrigatório</errorMessage>
</ValidationRule>