force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeAbrangenciaCadaProduto.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeAbrangenciaCadaProduto</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPossuiAssistenciaMedica__c == true
&amp;&amp;
ISBLANK( AbrangenciaCadaProduto__c))  
&amp;&amp; RecordType.Name == &apos;Manutenção Relacionamento&apos;</errorConditionFormula>
    <errorDisplayField>AbrangenciaCadaProduto__c</errorDisplayField>
    <errorMessage>Campo abrangência de cada produto Obrigatório</errorMessage>
</ValidationRule>