force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeAbrangenciaCadaProdutoEmpresarial.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeAbrangenciaCadaProdutoEmpresarial</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPossuiAssistenciaMedica__c == true
&amp;&amp;
ISBLANK( AbrangenciaCadaProduto__c ))
&amp;&amp; RecordType.Name == &apos;Prospecção Empresarial&apos;</errorConditionFormula>
    <errorDisplayField>AbrangenciaCadaProduto__c</errorDisplayField>
    <errorMessage>Campo abragência de cada produto Obrigatório</errorMessage>
</ValidationRule>