force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeACidadeDoGrupo.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeACidadeDoGrupo</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPertenceAlgumGrupo__c == true
&amp;&amp;
ISBLANK( CidadeGrupo__c ))  
&amp;&amp; RecordType.Name == &apos;Prospecção Empresarial&apos;</errorConditionFormula>
    <errorDisplayField>CidadeGrupo__c</errorDisplayField>
    <errorMessage>Campo cidade do grupo Obrigatório</errorMessage>
</ValidationRule>