force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeCNPJDoGrupo.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeCNPJDoGrupo</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPertenceAlgumGrupo__c == true
&amp;&amp;
ISBLANK( CNPJGrupo__c ))  
&amp;&amp; RecordType.Name == &apos;Prospecção Empresarial&apos;</errorConditionFormula>
    <errorDisplayField>CNPJGrupo__c</errorDisplayField>
    <errorMessage>Campo CNPJ Obrigatório</errorMessage>
</ValidationRule>