force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeContingenteMaximo.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeContingenteMaximo</fullName>
    <active>false</active>
    <errorConditionFormula>(HouveAlteracaoContingente__c == true  
&amp;&amp;
ISBLANK( ContingenteMaximo__c))
&amp;&amp; RecordType.Name == &apos;Manutenção Relacionamento&apos;</errorConditionFormula>
    <errorDisplayField>ContingenteMaximo__c</errorDisplayField>
    <errorMessage>Campo contigente máximo Obrigatório</errorMessage>
</ValidationRule>