force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeContingenteMinimo.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeContingenteMinimo</fullName>
    <active>false</active>
    <errorConditionFormula>(HouveAlteracaoContingente__c == true  
&amp;&amp;
ISBLANK( ContingenteMinimo__c))
&amp;&amp; RecordType.Name == &apos;Manutenção Relacionamento&apos;</errorConditionFormula>
    <errorDisplayField>ContingenteMinimo__c</errorDisplayField>
    <errorMessage>Campo contigente mínimo Obrigatório</errorMessage>
</ValidationRule>