force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeDaBaseOuDataDoUltimoReajuste.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeDaBaseOuDataDoUltimoReajuste</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPossuiAssistenciaMedica__c == true
&amp;&amp;
ISBLANK( DataBaseUltimoReajuste__c))  
&amp;&amp; RecordType.Name == &apos;Manutenção Relacionamento&apos;</errorConditionFormula>
    <errorDisplayField>DataBaseUltimoReajuste__c</errorDisplayField>
    <errorMessage>Campo Data Base Obrigatório</errorMessage>
</ValidationRule>