force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeDaBaseOuDataDoUltimoReajusteEmpre.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeDaBaseOuDataDoUltimoReajusteEmpre</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPossuiAssistenciaMedica__c == true
&amp;&amp;
ISBLANK( DataBaseUltimoReajuste__c ))  
&amp;&amp; RecordType.Name == &apos;Prospecção Empresarial&apos;</errorConditionFormula>
    <errorDisplayField>DataBaseUltimoReajuste__c</errorDisplayField>
    <errorMessage>Campo Data Base Obrigatório</errorMessage>
</ValidationRule>