force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeNomeBrinde.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeNomeBrinde</fullName>
    <active>false</active>
    <errorConditionFormula>(HouveEntregaBrinde__c == true
&amp;&amp;
ISBLANK(NomeBrindeEntregue__c ))
&amp;&amp; RecordType.Name == &apos;Manutenção Relacionamento&apos;</errorConditionFormula>
    <errorDisplayField>NomeBrindeEntregue__c</errorDisplayField>
    <errorMessage>Campo nome do brinde Obrigatório</errorMessage>
</ValidationRule>