force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeNomeBrindeProspeccaoEmpresarial.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeNomeBrindeProspeccaoEmpresarial</fullName>
    <active>false</active>
    <errorConditionFormula>(HouveEntregaBrinde__c == true  
&amp;&amp;
ISBLANK(NomeBrindeEntregue__c))
&amp;&amp; RecordType.Name == &apos;Prospecção Empresarial&apos;</errorConditionFormula>
    <errorDisplayField>NomeBrindeEntregue__c</errorDisplayField>
    <errorMessage>Campo nome do brinde Obrigatório</errorMessage>
</ValidationRule>