force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeNomeRepresentanteCorretora.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeNomeRepresentanteCorretora</fullName>
    <active>false</active>
    <errorConditionFormula>(HouveAcompanhamentoCorretora__c == true
&amp;&amp;
ISBLANK( NomeRepresentanteCorretora__c))  
&amp;&amp; RecordType.Name == &apos;Call&apos;</errorConditionFormula>
    <errorDisplayField>NomeRepresentanteCorretora__c</errorDisplayField>
    <errorMessage>Campo nome representante corretora Obrigatório</errorMessage>
</ValidationRule>