force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeOperadoraAtual.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeOperadoraAtual</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPossuiAssistenciaMedica__c == true
&amp;&amp;
ISPICKVAL( Operadora__c , &apos;&apos;))
&amp;&amp; RecordType.Name == &apos;Manutenção Relacionamento&apos;</errorConditionFormula>
    <errorDisplayField>Operadora__c</errorDisplayField>
    <errorMessage>Campo operadora Obrigatório</errorMessage>
</ValidationRule>