force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeOperadoraAtualProspecEmpresarial.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeOperadoraAtualProspecEmpresarial</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPossuiAssistenciaMedica__c == true  
&amp;&amp;
ISPICKVAL( Operadora__c, &apos;&apos; ))  
&amp;&amp; RecordType.Name == &apos;Prospecção Empresarial&apos;</errorConditionFormula>
    <errorDisplayField>Operadora__c</errorDisplayField>
    <errorMessage>Campo nome da operadora Obrigatório</errorMessage>
</ValidationRule>