force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeOperadoraDoPlanoOdontologico.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeOperadoraDoPlanoOdontologico</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPossuiPlanoOdontologico__c == true
&amp;&amp;
ISBLANK( OperadoraPlanoOdontologicoTexto__c ))
&amp;&amp; RecordType.Name == &apos;Prospecção Empresarial&apos;</errorConditionFormula>
    <errorDisplayField>OperadoraPlanoOdontologicoTexto__c</errorDisplayField>
    <errorMessage>Campo operadora do plano odontológico Obrigatório</errorMessage>
</ValidationRule>