force-app/main/default/objects/WorkOrderLineItem/validationRules/InformePercentualSinistralidade.validationRule-meta.xml
<ValidationRule>
    <fullName>InformePercentualSinistralidade</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPossuiAssistenciaMedica__c == true
&amp;&amp;
ISBLANK( PercentualSinistralidade__c))  
&amp;&amp; RecordType.Name == &apos;Manutenção Relacionamento&apos;</errorConditionFormula>
    <errorDisplayField>PercentualSinistralidade__c</errorDisplayField>
    <errorMessage>Campo percentual da sinistralidade Obrigatório</errorMessage>
</ValidationRule>