force-app/main/default/objects/WorkOrderLineItem/validationRules/InformePercentualUltimoReajuste.validationRule-meta.xml
<ValidationRule>
    <fullName>InformePercentualUltimoReajuste</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPossuiAssistenciaMedica__c == true
&amp;&amp;
ISBLANK( PercentualUltimoReajuste__c))  
&amp;&amp; RecordType.Name == &apos;Manutenção Relacionamento&apos;</errorConditionFormula>
    <errorDisplayField>PercentualUltimoReajuste__c</errorDisplayField>
    <errorMessage>Campo percentual do último reajuste Obrigatório</errorMessage>
</ValidationRule>