force-app/main/default/objects/WorkOrderLineItem/validationRules/InformePercentualUltimoReajusteEmpresari.validationRule-meta.xml
<ValidationRule>
    <fullName>InformePercentualUltimoReajusteEmpresari</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPossuiAssistenciaMedica__c == true
&amp;&amp;
ISBLANK( PercentualUltimoReajuste__c ))  
&amp;&amp; RecordType.Name == &apos;Prospecção Empresarial&apos;</errorConditionFormula>
    <errorDisplayField>PercentualUltimoReajuste__c</errorDisplayField>
    <errorMessage>Campo percentual do último reajuste Obrigatório</errorMessage>
</ValidationRule>