force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeQuantidadeModulos.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeQuantidadeModulos</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPossuiPlanoOdontologico__c == true
&amp;&amp;
ISBLANK( QuantidadeModulos__c ))  
&amp;&amp; RecordType.Name == &apos;Prospecção Empresarial&apos;</errorConditionFormula>
    <errorDisplayField>QuantidadeModulos__c</errorDisplayField>
    <errorMessage>Campo quantidade de módulos Obrigatório</errorMessage>
</ValidationRule>