force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeRazaoSocialGrupo.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeRazaoSocialGrupo</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPertenceAlgumGrupo__c == true
&amp;&amp;
ISBLANK( RazaoSocialGrupo__c ))
&amp;&amp; RecordType.Name == &apos;Prospecção Empresarial&apos;</errorConditionFormula>
    <errorDisplayField>RazaoSocialGrupo__c</errorDisplayField>
    <errorMessage>Campo razão social do grupo Obrigatório</errorMessage>
</ValidationRule>