force-app/main/default/objects/WorkOrderLineItem/validationRules/InformeValor.validationRule-meta.xml
<ValidationRule>
    <fullName>InformeValor</fullName>
    <active>false</active>
    <errorConditionFormula>(EmpresaPossuiPlanoOdontologico__c == true
&amp;&amp;
ISBLANK( Valor__c ))    
&amp;&amp; RecordType.Name == &apos;Prospecção Empresarial&apos;</errorConditionFormula>
    <errorDisplayField>Valor__c</errorDisplayField>
    <errorMessage>Campo valor Obrigatório</errorMessage>
</ValidationRule>