force-app/main/default/objects/WorkOrderLineItem/validationRules/JustifiqueAusenciaDaAssinaturaProspect.validationRule-meta.xml
<ValidationRule>
    <fullName>JustifiqueAusenciaDaAssinaturaProspect</fullName>
    <active>false</active>
    <errorConditionFormula>(AssinaturaProspectRegistrada__c == false
&amp;&amp;
ISBLANK(JustificativaAusenciaAsProspect__c ))
&amp;&amp; RecordType.Name == &apos;Implantação&apos;</errorConditionFormula>
    <errorDisplayField>JustificativaAusenciaAsProspect__c</errorDisplayField>
    <errorMessage>Campo justificativa de ausência da assinatura Obrigatório</errorMessage>
</ValidationRule>